varying traits layout accomplished

--- a/Uebung/Base.lproj/Main.storyboard
+++ b/Uebung/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -14,20 +14,20 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Uebung" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="AOf-uM-9OH" userLabel="PinViewStack">
-                                <rect key="frame" x="100" y="119" width="214" height="663"/>
+                                <rect key="frame" x="50" y="119" width="328" height="693"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="____" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="66O-sD-epX">
-                                        <rect key="frame" x="82" y="0.0" width="50" height="449"/>
+                                        <rect key="frame" x="138.66666666666666" y="0.0" width="50.666666666666657" height="471"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gVC-Sg-gwQ" userLabel="ButtonsStack">
-                                        <rect key="frame" x="2" y="489" width="210" height="174"/>
+                                        <rect key="frame" x="59" y="511" width="210" height="182"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="jwg-dI-GNe" userLabel="NumPadStack">
                                                 <rect key="frame" x="0.0" y="0.0" width="210" height="134"/>
@@ -149,8 +149,15 @@
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ej7-Hg-Wmq" userLabel="0">
-                                                <rect key="frame" x="90" y="144" width="30" height="30"/>
-                                                <state key="normal" title="0"/>
+                                                <rect key="frame" x="80" y="144" width="50" height="38"/>
+                                                <color key="backgroundColor" name="AccentColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="MwC-tq-7Fw"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                <state key="normal" title="0">
+                                                    <color key="titleColor" red="0.92155987019999996" green="0.92156267169999995" blue="0.92156887050000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -163,10 +170,14 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="AOf-uM-9OH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="80" id="8db-Bk-8aB"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="AOf-uM-9OH" secondAttribute="trailing" constant="80" id="utR-Of-4uZ"/>
-                            <constraint firstItem="AOf-uM-9OH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="75" id="uz0-G9-Gnu"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="AOf-uM-9OH" secondAttribute="bottom" constant="80" id="wCE-3M-Jhe"/>
+                            <constraint firstItem="AOf-uM-9OH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="8db-Bk-8aB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="AOf-uM-9OH" secondAttribute="trailing" constant="30" id="utR-Of-4uZ"/>
+                            <constraint firstItem="AOf-uM-9OH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="75" id="uz0-G9-Gnu">
+                                <variation key="heightClass=compact" constant="30"/>
+                            </constraint>
+                            <constraint firstAttribute="bottomMargin" secondItem="AOf-uM-9OH" secondAttribute="bottom" constant="80" id="wCE-3M-Jhe">
+                                <variation key="heightClass=compact" constant="30"/>
+                            </constraint>
                         </constraints>
                     </view>
                 </viewController>
